im stupid added zoom class to id field.... fixed it

--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -398,7 +398,7 @@
     <div id='eq-cnt'></div>
     <button id='add-eq-btn'>Add Equation</button>
     <button id='save-eqs-btn' hidden>Save</button>
-    <div id='calc-input disable-zoom' hidden>
+    <div id='calc-input' class='disable-zoom' hidden>
       <table class='calc-input-table numeric'>
         <tr>
           <td><button class='calc-button'>7</button></td>
