increased input button size

--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -29,11 +29,12 @@
         max-width: 45pt;
       }
       .calc-button {
-        width: 25pt;
-        height: 25pt;
+        font-size: 20pt;
+        width: 35pt;
+        height: 35pt;
       }
       .calc-button.wide {
-        width: 35pt;
+        width: 55pt;
       }
       .calc-button.locked {
         background-color: #958b8b;
