--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -104,6 +104,10 @@
         );
       }
 
+      function getVars(index) {
+        return Object.keys(saved[index]);
+      }
+
       function updateVariables(target) {
         let matches = target.value.match(/[a-z_A-Z][a-z_A-Z0-9]*/g);
         const varIndex = du.find.up('[index]', target).getAttribute('index');
@@ -111,10 +115,11 @@
         if (matches) {
           matches = matches.filter(onlyUnique);
           let repeatHtml = '<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
+          const newSaved = {};
           for (let index = 0; index < matches.length; index += 1) {
             const name = matches[index];
             const value = saved[varIndex][name] || 0;
-            saved[varIndex][name] = value;
+            newSaved[name] = value;
             const div = du.create.element('span');
             const b = du.create.element('b');
             b.innerText = name;
@@ -122,6 +127,7 @@
             div.append(du.create.element('input', {class: c, value, name, disabled: true}));
             repeatHtml += '&nbsp;' + div.outerHTML;
           }
+          saved[varIndex] = newSaved;
           inputCnt.innerHTML = repeatHtml;
         } else {
           inputCnt.innerHTML = '';
@@ -130,18 +136,38 @@
         updateReferenceList();
       }
 
+      function shouldEvaluate(eqn, otherEqn, index) {
+        const refReg = (varName)  => new RegExp(`\\$\\(${index}(|,\\s*("|')${varName}("|'))\\)`);
+        const vars = getVars(index);
+        for (let j = 0; j < vars.length; j += 1) {
+          const eqnStr = buildEquationStr(otherEqn, index);
+          if (eqnStr.match(refReg(vars[j]))) {
+            return true;
+          }
+        }
+        return false;
+      }
+
+      function buildEquationStr(eqn, index) {
+        let eqnStr = eqn.value;
+        const vars = getVars(index);
+        for (let i = 0; i < vars.length; i += 1) {
+          eqnStr += saved[index][vars[i]];
+        }
+        return eqnStr;
+      }
+
       function evalConnected(index) {
         const eqns = du.find.all('.equation');
-        const refReg = new RegExp(`\\$\\(${index}\\)`);
-        for (let i = 0; i < eqns.length; i += 1) {
-          let eqnStr = eqns[i].value;
-          const vars = du.find.downAll('.eq-input-elem', eqns[i]);
-          for (let j = 0; j < vars; vars += 1) {
-            eqnStr += vars.value;
-          }
-          if (eqnStr.match(refReg)) {
-            evaluate(eqns[i]);
-          }
+        const eqn = eqns[index - 1];
+        if (eqn) {
+          const eval = [];
+          eqns.forEach((otherEqn) => {
+            if (shouldEvaluate(eqn, otherEqn, index)) {
+              eval.push(otherEqn);
+            }
+          });
+          eval.forEach((eqn) => evaluate(eqn));
         }
       }
 
@@ -367,12 +393,13 @@
         if (value === '') return;
         const selected = target.selectedOptions[0];
         const index = du.find.closest('optgroup', selected).label;
-        if (value === 'Ref') {
+        if (value === '=') {
           calcInput.value += `$(${index})`;
         } else {
           calcInput.value += `$(${index}, \'${value}\')`;
         }
         target.value = 'Ref';
+        evaluate(calcInput);
       }
 
       canEdit();
@@ -382,9 +409,9 @@
 
       du.on.match('click', '#add-eq-btn', () => addEq());
       du.on.match('keyup', '.equation', updateVariables);
-      du.on.match('keyup', `.${c}`, variableChange);
+      du.on.match('keyup', `.eq-input-elem`, variableChange);
       du.on.match('click', '.equation', evaluate);
-      du.on.match('click', `.${c}`, evaluate);
+      du.on.match('click', `.eq-input-elem`, evaluate);
       du.on.match('click', '#save-eqs-btn', save);
       du.on.match('change', 'input[name="percision-selector"]', updatePercision);
       du.on.match('keyup', '.percision-input', setPercision);
