--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -83,13 +83,11 @@
         html += `<option>Ref</option>`;
         for (let i = 0; i < indexes.length; i += 1) {
           const index = indexes[i];
-          html += `<optgroup label="${index}">`
-          html += `<option>=</option>`;
+          html += `<option index='${index}'><b>${index}</b></option>`;
           const vars = Object.keys(saved[index]);
           for (let j = 0; j < vars.length; j += 1) {
-            html += `<option>${vars[j]}</option>`;
+            html += `<option index='${index}'>&nbsp;&nbsp;&nbsp;&nbsp;${vars[j]}</option>`;
           }
-          html += '</optgroup>';
         }
         select.innerHTML = html;
       }
@@ -99,9 +97,10 @@
         if (!target.disabled) {
           hideCalcInput();
           target.focus();
-        } else (
-          setCalcInput(target)
-        );
+          target.select();
+        } else {
+          setCalcInput(target);
+        };
       }
 
       function getVars(index) {
@@ -130,6 +129,7 @@
           saved[varIndex] = newSaved;
           inputCnt.innerHTML = repeatHtml;
         } else {
+          saved[varIndex] = {};
           inputCnt.innerHTML = '';
         }
         evaluate(target);
@@ -389,10 +389,10 @@
       }
 
       function applyReference(target) {
-        const value = target.value;
+        const value = target.value.trim();
         if (value === '') return;
         const selected = target.selectedOptions[0];
-        const index = du.find.closest('optgroup', selected).label;
+        const index = selected.getAttribute('index');
         if (value === '=') {
           calcInput.value += `$(${index})`;
         } else {
