Added temporary code to convert exiting data to new format

--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -273,6 +273,7 @@
       let isHome;
       function load(name) {
         function populate(body) {
+          if (Array.isArray(body)) body = {equations: body, links: []};
           if (name) {
             du.find('#save-btn-cnt').hidden = true;
           } else {
